--- a/virus.reflection.org
+++ b/virus.reflection.org
@@ -1,27 +1,71 @@
-#+Title:一份关于大流行的反思
-* 引言
-当谈论到大流行，大多数人的印象是：病毒造成了全球医疗系统的瘫痪，经济、秩序都受到了巨大冲击。无论在医疗上，还是在经济上，人们被迫度过了不安全的两年。随着疫苗的推出和病毒的弱化，大流行已经接近尾声。大流行造成的世界秩序的混乱，经济的衰退和停滞，才是当下需要面对的。
-然而，爆料革命的情报为我们勾画出大流行的全貌。大流行不仅仅是人类社会的一次偶然的灾难，它至少应该包含中共制造病毒、全球疫情和疫苗灾难。参加爆料革命我成功逃过了疫苗，并且在感染时有解药。我与大多数了解真相的人一样，认为大流行是少数邪恶之人对全人类犯下的可怕罪行，他们既借全球精英之手屠杀无辜的公众，又利用精英的。整个世界分化成为疯狂的刽子手和无助的受害者，还有一部分尽力挽救受害者的人，虽然我们大多数时候无能为力。谋杀者之所以谋杀是因为他们疯狂、邪恶，或者被疯狂、邪恶的思想蛊惑。受害者被杀害是因为他们没有能力与强大的敌人抗衡。其他人只能看着这一切发生，迷茫而痛苦，因为他们知道只有爆料革命的胜利，将中共消灭才能结束这场人间浩劫。
-但当我，我才开始意识到，我的思路错了。
+#+Title:现代文明与大流行：一份对人性的结构性反思
+#+Author:KURORO
+* 导论(draft)
+（串联逻辑脉络，验证现代性、文明的含义、良知结构、原罪论...）
+当谈论到Covid 19大流行，大多数人的印象是：它始于人类偶然感染的一种新病毒，随后发展为全球性大流行，导致医疗系统几度崩溃，使全球经济陷入长达三年的衰退期。随着大流行的落幕，社会秩序正在逐渐回归正轨。然而，真相绝非如此。事实上，大流行并非一次偶然的灾难，它由制造病毒、掩盖真相和推行疫苗等一系列事件构成，是一场系统性的、针对全人类的大屠杀。
+
+随着病毒溯源的推进和疫苗灾难的显现，大流行的真相将逐渐向公众揭开，政府、媒体和技术官僚的信用也将逐渐被瓦解。在此背景下，全球势必追责大流行的始作俑者，这将进一步推动灭共进程。同时，青蒿素和健康的精卵子将很大程度地解决疫苗灾难。最终，大流行将在共产党的灭亡和疫苗灾难的结束中落幕。然而，如果我们对它的关注也就此结束，那么我们将不能从大流行中得到任何教训。\\
+在后中共、后疫苗时代，我们必须面对的困难是，如何重建社会秩序，使它能够防止大流行再度发生。为此，我们需要对大流行进行结构性反思，并使反思所得进入当代社会的自我认知和制度实践之中。在此过程中，一个无法回避的问题是，大流行如何发生在现代社会？\\
 
 
-爆料革命已经将有关大流行的真相公之于众，
+起初，我认为大流行只是少数人对全人类犯下的罪行。但当我认真审视大流行时，才意识到它与现代文明多么格格不入。事实上，在大流行发。
 
 
-随着疫苗灾难和一系列次生灾难（如经济危机）的陆续爆发，以及灭共进程的推进，越来越多人会苏醒。理解大流行就显得格外重要。在不久地未来，青蒿类药物或许可以最大程度的拯救多数人的性命，但如果随着大流行灾难的解决，我们对它的关注也就此结束，那么最终结果就是，痛苦从我们对大流行的记忆中逐渐消退，大流行传递给我们的信息也就没有听众，也无人传播。我试图以一系列文章为一项被忽视却具有思想重要性的任务做出一些贡献。这个任务就是对大流行进行结构性反思，并使反思所得进入当代社会的自我认知、制度实践和社会成员之中。
-（不明真相的公众视角）
-对于如今尚不明真相的公众，他们已经开始觉得大流行尾声将至。即使作为爆料革命参与者，我仍然。连支持大流行真相的群体也几乎只有爆料革命，那对此展开反思的就更不可能超出爆料革命群体。然而，事实上，类似的反思也并不多见。
-（一系列错误的处理，如研究分流、公众意识清洁，最终导致大流行的刺痛从记忆中拔出）
 
-当我们被问到：这一系列的事件是如何发生在如此文明的现代？如何理解现代文明下的这一系列灾难？如何理解这些灾难在文明进程中的地位？我们的内心可能不会有太多波澜。\\
+我们几乎不会认为大流行在昭示现代文明的深层危机，而是将它看作一类广泛常见的社会现象的极端情况。我们必须容忍它，因为它具有回复性和普遍性，现代社会过去、现在和将来都是一个被设计来压制它甚至消灭它的组织。这个叫性恶论，不是原罪论。这不是真理。
+这个深层危机就是，现代文明提供了一种压制表达的良知结构，导致唯一防止人作恶的良知失效了。
+良知需要一种表达的结构，现代文明提供了良知结构
+（如何理解现代文明下的疫苗灾难？）
+一对张力，现代性的深层危机vs人性的深层危机：现代性的深层危机就是让人的良知失效，让理性从良知的管辖内逃逸。而人性的深层危机是扭曲良知。
+1. 现代文明的深层危机（现代性不一定可靠）
+2. 工具理性的深层危机
+3. 良知的深层危机
+工具理性从良知的监管下逃逸的危险（工具理性不可靠，因为大流行的因素都符合工具理性，它不具备防止大流行发生的作用，甚至还成为帮凶）（理性退化、良知失能--信仰的缺席，理性只为地上之事，故要脱离良知的管辖），被世界塑形的危险（工具化...良知会被污染，变得麻木迟钝，丧失功能）（良知的退化--信仰缺席，良知成了无源之水），良知诱发罪行的危险（人性不可靠，即使有良知、不愿意，但人依旧会作恶，因为每当我愿意为善就有恶同在）（大流行宏观的结果是“善”的，始作俑者也是出于善的目的--维持秩序、供应等，做出消灭一部分人类的决定）（原罪论--本性如此；信仰缺席，既不知晓原罪的真理，也不能救赎原罪的人性。）。
 
-我们几乎不会把大屠杀与光鲜亮丽的现代文明相连，不会认为它在昭示现代文明的一个深层的危机，而是将其看作一系列特殊事件，或者是一类广泛常见的社会现象的极端情况，我们必须容忍它，因为它具有回复性和普遍性，现代社会过去、现在和将来都是一个被设计来压制它甚至消灭它的组织。
-* 现代文明与疫苗灾难
-** 如何理解现代文明下的疫苗灾难？
-贬低、误解或者轻视大流行的倾向：将大流行、疫苗灾难(全人类大屠杀)视作文明化进程的失败，不可能是人类文明化进程的产物。这种角度将造成一个结果：大流行被视为一个“特殊”事件，对它的反思也就止步于事情层面，无法对文明的人性进行深入的反思。
+为什么理性会天生被良知管辖？事实上是运用理性的行为被良心管辖，理性更像工具。事实上是人拥有理性和良知，当它们出现张力的时候，人不得不选择舍弃其中之一。人既可以选择顺从良知的声音，也可以选择顺从理性的声音。
+理性和良知为什么会出现张力？难道真的东西会不善（或善的东西不真）吗？
+通常是工具理性与良知会出现张力，其实认识真理之理性应该不会与良知有张力，因为它们不在同一个领域发挥功能。但工具理性和良知会在同一个地方发挥功能，那就是行为的选择上。
+** 作为现代性之验证的大流行
+遭遇过绑架、共同经历过人质磨难的夫妇离婚率出奇的高。在恐怖事件发生的过程中，平常的好丈夫“被证明是”自私的人，只顾自己的死活。曾经大胆的生意人表现出令厌恶的怯懦；而足智多谋的“男子汉”面如土灰。人的两面哪个更加真实？问题错了。这两面都是受害者一直具有的品性，它们只是在不同时间和不同环境下显露而已。“好的”一面之所以看起来正常只是因为正常的环境使它覆盖于另一面之上。而另一面尽管通常看不见，却总是存在。这个发现引人注目的是，如果不是遭遇绑架，这“另一面”将可能永远隐藏下去。我们缘引上述例子的结论是，要不是大流行，大多数救助者将继续行进于他们的独立道路上，一些人从事慈善工作，一些人过着简单而不引人注目的生活。他们是潜在的英雄，常常无法把他们与常人区分开。不可能“提前看出”个人为牺牲而做出准备或者个人在灾难面前会表现出懦弱的迹象、征兆或者暗示。
+大流行造成的痛苦（让人产生强烈意愿不去面对）就是要令人痛苦地去怀疑大流行可能远不仅仅是一次失常，不是人类进步的坦途上的一次偏离。大流行并不是现代文明的对立面。我们猜想，大流行只是揭露了现代社会的另一面，这两面很好地、协调地依附在同一实体之上。它们不仅仅是一个硬币的两面，而且它们不能离开对方单独存在。
+事实上，大流行过程中的每一个因素都是正常的，即使大流行成为可能的所有条件都是完全符合现代文明的原则和价值观。“正常”还指它们符合人类追求幸福和完美社会的正确方式。毁灭机器与有组织的社会从结构上没有区别。就它所扮演的角色而言，毁灭机器就是组织起来的社群。
 
-事实上，大流行过程中的每一个因素（在现代人看来）都是正常的，完全符合现代文明的原则、精神、世界观、价值观。现代的官僚制度、理性精神、高效原则、科学主义（思维）、赋予主观世界以价值等理论，不包含任何可以防止此类暴行的可能性的机制，也没有任何东西能够将此类行为定义成暴行。现代文明当然不是大流行的充分条件，但无疑是必要条件。没有现代文明，疫苗灾难是不可想象的。正是由于现代文明的工具理性精神，已经将它制度化的官僚体系形式，才使得疫苗灾难成为可能，并且使它的执行方案格外合理。
-** 现代官僚体制存在什么问题？它和大流行有什么关系？
+（律法是通过罪借律法生恶欲显明罪恶极了，它显明的是一个罪的权势，一个堕落的趋势）
+（良知是通过罪借良知行出败坏）
+** 作为良知之验证的大流行
+** 作为原罪人性之验证的大流行
+** 文明化进程的涵义 
+深深根植于现代社会自我意识中的病因学神话实则是一个良知升华的故事，即人性从野蛮中逐渐升华。专家一口相信人类的问题是错误的政策的结果，一旦运用科学的、正确的方式制定政策，就可以消灭这种问题。如此形成的现代“园艺”国家观，将它所统治的社会看做是设计、栽培和喷杀杂草等活动的对象。
+从这个角度看待大流行，它就只能被理解为文明（即人类有目的的、受理性支配的活动）无法将自然留在人身上的任何不良的、与生俱来的癖好包容在内的结果。换言之，我们至今还不够文明。未完成的文明化进程还有待画上句号。如果非要从大流行中得到教训，那就是，防止野蛮行为一次次地发生显然还需要更多的文明化成就。在这个教训中，没有任何东西可以质疑这种成就在未来的作用和最终的结果。我们肯定是朝着正确的方向前进，而或许我们的速度还不够快。（注：南辕北辙，如果往错误的方向加速，只能越来越偏离正道）
+随着大流行真相的揭开，它的另外一种解释可能更加可信。大流行揭示了当人的良知/本性（厌恶罪恶、杀戮，不倾向于暴力，害怕负罪感，害怕为不道德的行为负责）遭遇到文明的产物当中最备受珍视（良知？工具理性？）的实际效率，即遭遇到其技术、选择的理性标准、思想和行为服从于经济与效能的倾向的时候，就暴露出了它的不足与脆弱。大流行从人类的高级实验室中诞生，乘坐最先进的交通工具扩散到世界各地，配备最先进的疫苗武器，自始至终有着科学的组织和设计。现代文明不是大流行的充分条件，但毫无疑问是必要条件。没有现代文明，大流行是不可想象的。正式现代文明的理性世界让大流行变得可以想象。
+大流行之所以对于我们理解现代官僚制度的理性化模式是如此关键，不仅仅一不主要是因为它提醒了我们官僚制度对于效率的追求是刻板和在良知上是多么的盲目。即使我们全然理解了这史无前例的全人类屠杀在什么样的程度上依赖于已经充分发展并根深蒂固的精密而准确的劳动分工的技巧和习惯，依赖于命令和信息保持畅通无阻，或者依赖于自发而又互为补充的非个人的协调行动。简言之，依赖于在办公室分为里生长得最为茂盛的那些技巧和习惯，大流行的意义也不会得到全面的表述。一旦我们意识到“最终解决”的观念在何种程度上是官僚制度文化的一个产物，那么大流行投射在我们对官僚制度之理性的理解上的光芒就是最动人的了。
+在大流行的实施过程中，没有任何时候与理性的原则发生过冲突。无论哪个阶段，“最终解决”都不与理性地追求高效和最佳目标的实现相冲突。相反，它始终以一种。这并不意味着大流行是现代官僚体系或者它所体现的工具理性文化所决定的。更不是说，现代官僚体系一定会导致大流行一类的全人类大屠杀的现象。不过，单单工具理性的规则无法防止这种现象的发生。这些规则中没有任何东西可以将“社会工程”采取的大屠杀式的手段视为不正当，或者是将在它们作用下的行为视为非理性而加以摈弃。进一步说，我认为官僚制度文化是大流行得以构思、执行并最终实现的特定环境。它促使我们将社会视为一个管理的对象，视为许多亟待解决的“问题”的集合，视为需要被“控制”、“掌握”并加以“改进”或者“重塑”的一种“性质”，视为“社会工程”的一个合法目标，总而言之就是视为一个需要设计和用武力保持其秩序的花园。我还认为正是由于工具理性的以及将它制度化的现代官僚体系形式，才使得大流行之类的方案不仅有了可能，而且格外“合理”。
+** 道德冷漠的社会生产
+（大流行比大屠杀更难以察觉的点在于给人注射疫苗可以出于对他好的想法。大流行比大屠杀更加隐蔽、更加具有迷惑性。）
+重构克服良知天性（动物性同情）的社会机制。这是与天生的道德自抑相悖的行为的社会生产，能够将从任何”正常“意义上不是”良知败坏“的人转变为凶手（帮凶）或者大屠杀过程中有意识的合作者。
+反对暴行的道德自抑在三种条件下会受到损害：暴力被赋予了权威（通过享有合法权利的部门的正式命令来实现）、行动被例行化（通过规章约束的实践和对角色内容的精确阐述来实现）、暴力的受害者被剥夺了人性（通过意识形态的界定和灌输来实现）。
+** 道德盲视的社会生产（平庸之恶）
+这种社会机制具有更加邪恶的潜力，使更大范围的人被卷入到实施大屠杀的行动当中，而这些人在此过程中从来没有主动地面对艰难的良知抉择，也就没有了主动地面对评理良心谴责、反抗的需要。从来没有在良知问题上出现过挣扎，因为这些行动的良知层面并非一目了然，或者说因为这些层面被有意地杜绝了被发现与讨论。换言之，行动的良知特征要么是不可见的，要么就是被精心掩盖了。
+行为的中介，即个人的行为通过另一个人、一个中间人来表现的现象，这个人站在我和我的行为中间，使我不能体验到我的行动。它作为现代社会最为显著和基本的特征。意图和实际完成之间有很大的距离，两者之间的空间里充满了大量 的细微行为和不相干的行为者。中间人挡住了行动者的目光，让他们看不见行为的后果。行为与其后果之间的生理、精神距离的增加超出了良知发挥作用的程度。它消除了行为的良知责任，因而避免了个人的良知与行为造成的不良后果之间的冲突。随着大多数具有社会意义的行为得到了一长串复杂的因果和功能依赖（劳动分工）关系的中介，良知困境消失在人的视野之中，进一步的良知审视和有意识的选择的机会也将越来越少。
+** 文明化进程的道德后果（现代文明的深层危机）
+文明化有两个核心：对非理性和本质上反社会的力量加以压制，以及从社会中逐渐且毫不留情地消除暴力（其实是在国家的控制之下将暴力集中，在国家当中暴力被用来守护共同体的边界和维持社会的秩序）。文明社会观，首要是把文明社会看作一种道德/良知力量，看做一种在施加规范秩序和法制当中相互合作、相互补充的制度体系，而秩序和法制维护了社会和平与个人安全。这中观点不一定产生误导，但对于大流行而言，它必然只能看到一个方面。它使人们无法关注到文明具有破坏性的另一面，并且有效地将那些坚持现代秩序具有双面性的反思者推向沉默和边缘。
+我认为大流行的主要教训就是必须严肃地对待这些批评、反思并借此拓展文明化进程的理论模式，以涵盖文明化进程那种降低贬斥社会行动中的良知困境并使之丧失权威的倾向。
+（电车难题就是一种良知困境，但我们通常会诉诸法律工具，本质就是一种工具理性，将良知的责任降为法律责任，然后遵循法律的责任，以次逃避良知困境，让问题能够得以解决）
+除了其他方面，文明化的进程是一个把使用和部署暴力从良知判断中剥离的过程，也是一个把理性的迫切要求从良知的干扰中解放的过程。提升理性以排除其他所有的行为标准，特别是使暴力的运用屈从于理性计算的趋势。大屠杀式的现象就必须被看成是文明化进程的产物，以及永久的潜在可能。
+** 作为良知结构的现代社会
+
+** 人性的深层危机
+（人性本源：性恶论vs原罪论）
+* 现代文明的深层危机(draft)
+一种贬低、误解或者轻视大流行的倾向是，将大流行视作文明化进程的失败，而不是社会文明化的产物。这种倾向导致我们把大流行当作一个特殊事件，以至于对它的反思也止步于事实层面，无法对现代文明进行深入的反思。
+
+事实上，大流行过程中的每一个因素都是正常的，它们完全符合现代文明的原则和价值观。
+
+现代的官僚制度、理性精神、高效原则、科学主义（思维）、赋予主观世界以价值等理论，不包含任何可以防止此类暴行的可能性的机制，也没有任何东西能够将此类行为定义成暴行。
+
+现代文明当然不是大流行的充分条件，但无疑是必要条件。没有现代文明，疫苗灾难是不可想象的。正是由于现代文明的工具理性精神，已经将它制度化的官僚体系形式，才使得疫苗灾难成为可能，并且使它的执行方案格外合理。
+** 现代官僚制度
+现代官僚体制存在什么问题？它和大流行有什么关系？
 现代官僚制度是疫苗屠杀得以设计、实施和实现的重要机制。作为使工具理性制度化的官僚系统，它使得大屠杀的解决方案成为可能，并增加了这一方案贯彻实施的可能性。层制将社会视为被控制、掌握、改进与重塑的对象，以理性化、科学化、专业化的运作原则使得大屠杀远远超过了过去的屠杀事件。
 层级化和功能的劳动分工是现代官僚体系的核心特征，其后果是成员以技术的责任代替了道德的责任。劳动分工使对集体性和组织性行动的成果有所贡献的大多数人，与该成果本身之间产生距离。
 
@@ -32,6 +76,7 @@
 用纯粹技术性、道德中立的方式来表述这些对象。非人化开始于官僚机构行为所针对的对象因距离而可以并实际上被简化为一套定量措施时。在疫苗屠杀中，对于卫生官员而言，对他们的工作对象有意义的说明就是公众的疫苗接种率。
 当官僚体系执行任务的对象被有效地非人化，并因此被抛弃作为道德需求的潜在对象，他们就会被带着道德冷漠的眼光看待。一旦他们的抵抗或不配合阻碍了官僚程序的顺畅，这种道德冷漠就会很快转变为非难和指责。官僚体系甚至会采取某种强制性的手段以保证官僚程序的流畅。
 ** 执行者
+执行者难道没有良知吗？如果他们意识到自己可能在作恶，还会执行吗？
 执行者的行为
 行为的中介是现代社会最显著和最基本的一个特征，与高度分工非常密切。意图和实际执行之间存在很大的距离，两者之间的空间里充满栋梁的细微行为和不相干的行动者。中介阻挡了行动者的目光，让他看部件行为的结果。行为与结果的距离增加超过了道德自抑发挥作用的程度。
 人类残酷的倾向与受害者的接近程度负相关。行为的中介使得多数成员远离受害者，因而更加专注与行为而非良心。
@@ -40,7 +85,9 @@
 在序列化的行动中，行动者成为自己过去行动的奴隶，这种控制远超其他制约。如果否定某次行动的正当性，那么上次行动也是正当的？因此没什么比分担在行动者看来是犯罪行为的责任更能把他们联系在一起，所以同谋者通常比较团结，而且会”一条路走到黑‘“。
 官僚体系中的道德被赋予了新的含义，如忠诚、服从、尽责、义务、纪律等概念，以适配现代化的官僚体系。于是上级成了道德关怀的最高目标，同时又是最高的道德权威。忠诚即在纪律规范下尽个人义务。
 复杂多层级的官僚体系将导致责任的推卸。这意味着责任的湮灭，意味着原本的道德权威不起作用。
+（以设计病毒威为例，执行者既有发挥良知的困难，又选择持续压制自己的良知）
 ** 受害者的合作
+（现代官僚制度一定导致如是恶果吗？非也。若无受害者的合作，大流行也无法以如此低的成本实施。权威机构会运用手段压迫和诱使受害者合作：欺骗、利诱、威逼、孤立等，这场不幸是施害者和受害者合作导致的。）
 疫苗屠杀过程中，权威机构利用受害者的理性进行压制，从而使得屠杀的过程得以更低的成本进行。封锁受害者+拯救你所能拯救者。
 (病毒和疫苗灾难是如何发生的？政府、技术官僚机构的信用和权威，以及民众对权威的迷信；迷信权威的原因有，公众丧失了批判性思维，无法通过独立思考分辨真相；权威通过广义的教育手段，对公众进行洗脑，既让公众失去批判性思维，又不断传递虚假信息）
 （考察大流行从最具代表性的现象，如公众对疫苗的态度、精英对疫苗的态度、技术官僚的行为，还原灾难发生的过程，揭示权威的堕落与公众的麻木。结论：在权威的堕落和公众的麻木中，灾难就这样发生了。）
@@ -77,8 +124,6 @@
 （人为什么会体制化、被世界塑形？因为人类需要寻找存在的意义？）
 
 显然，现代文明的许多思想、理念和成果都是非常好的，因为人类的天性是向往美善的。但这种对美善的向往和感知并不能很好地保持，当良知受挑战时，它的发挥可能遇到困难。当对美善的追求愈发热烈时，人就可能抛弃良知的声音。这也并非人所愿意的，否则也不会将现代文明带来的各种可能阻碍良知发挥作用的因素称为挑战和困难。换言之，并非现代性导致人性堕落，而是人向往美善的天性既美好又脆弱，人类没有太多保持纯真的心智和能力。现代性无疑是诱发或促进了人性败坏的发生，但真正的根源在于人性之中有着一个与生俱来的缺口。（这个缺口就会让我们在不知不觉中丢失对美善最纯真的向往，因而在愿意为善的时候，恶的种子就已经埋下。）
-
-
 ** 大流行的根源：现代性、体制化与平庸之恶
 （病毒和疫苗灾难为什么会发生？病毒疫苗灾难是现代性体制化+平庸之恶[不假思索]的必然结果。平庸之恶是卷入体制、逐渐丧失批判性思维的根源，即人类拥有理性[对真理的感知和向往]和良知[对善的感知和向往]却没有持受理性和良知的能力[工具理性可能会保留]。它是人类的理性和良知在面对现代性时表现得无比脆弱的根源[之一]。）
 （病毒灾难的发生，有基本条件，如权威作恶、公众迷信。权威建立、巩固到作恶，与公众批判性思维、独立思考能力的丧失一路相随。不可否认，权威利用了自己的优势，迫使公众进一步放弃独立思考能力，但公众同样为此负责，因为自己的平庸之恶。我想说，病毒灾难的发生并不是文明进程的插曲，它是自然的结果。并非权威者单方面伤害公众，而是体制化的权威和公众共同完成的一次“大屠杀”）
@@ -93,7 +138,31 @@
 * 现代文明的革命
 事情层面能做的就是变革。理清问题和挑战，给出解决原则、思路或方案。必须强调不能过分的追求完美的秩序（现代性就是对秩序的一种永无止境的构建）。
 
+
+
+
 延续前文提到的问题。
+** 现代官僚体系
+从本质上说，官僚体系是那些有任命的官员执行法律和政策的大组织的统称。在理想状态下，它遵循规则与程序，有一条清晰的管理链（或权威层级），把政策应用到特定的情景中。它使政府的运作具备理性、统一、可预测和可监控的特征。没有官僚体系，也就没有政府。
+官僚体系是永久政府。相比那些不断更替、选举产生的官员，职业文官则终身在一个政府机构里工作，他们或许会听命于民选官员，但更多的是遵从法律并安条文行事。对于那些具体领域，他们比新就任、位于自己之上的官员更加了解情况。民选官员与职业文官之间经常发生摩擦。前者试图以大胆、全新的方式来重构官僚体系；文官则非常清楚这些大胆创新的后果，因此一贯小心谨慎地行事。官僚体系一旦建立，便拥有一种内在的保守性，改变它是政治家最为困难的任务之一。
+几乎所有的大型组织都具备官僚制度的特征。无论是在军队，还是在学校、医院、大企业，官僚制度都非常常见。现代社会无法逃避官僚体系。
+*** 官僚体系的特征
+文官从国会和总统那里只能得到宽泛的指导性意见，大部分决策都是文官根据其工作领域里的专业知识作出的，而由于行政事务的高度专业化，政治领袖缺乏这种专业知识。是官僚体系本身在作出大量决策。
+在官僚机构里，与其他组织一样，友情、随心所欲、非正式、谋求利益最大化都是非常普遍的。官僚机构有转变成为利益集团的趋势（技术官僚）。官僚们远非中立、消极的行政人员，而是积极地参与政策和法规的制定。民选和任命的行政官员高度依赖职业文官提供的信息和建议。没有哪一个政府能完全控制其官僚机构。
+*** 官僚体系的困境
+官僚体系是行政的必需，但它也是实现国家目标的障碍。在最坏的情况下，官僚体系还会出现“艾希曼”现象。
+*** 如何对待官僚机构？
+官僚机构已经变得十分庞大、强有力、不负责任、富有扩张性和腐败。绝大多数治疗官僚体系的建议只会导致更多的官僚。以下是建议性方案：
+1. 监察专员
+   由议会而非行政部门任命的司法机构，绝对独立于行政体系之外。监察专员是议会律师，负责维护那些被官僚机构错误对待的公民的权益。他拥有传讯权，对犯错的官员的斥责足以纠正这个错误。
+2. 立法检查
+3. 裁减
+4. 分权
+5. 官僚机构政治化
+   维持一定数量的任命官员
+*** 官僚与社会
+尽管我们不喜欢官僚体系，它是由我们的议会建立、提供资金并赋予责任的，有时它会自行其是，但最初建立它的理由仍然存在。我们可以且必须改善法规和执行它们的机构，但不可能废除官僚体系。
+
 
 去中心化革命（铸币权、组织/协作）
 
